<resources>
    <string name="app_name">maps</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>

    <string name="signin">로그인</string>
    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>

    <string name="signup">회원가입</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>
    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
</resources>
